--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -7,8 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: var(--pn-space-2xl);
-  padding: var(--pn-space-2xl) var(--pn-space-xl);
+  gap: var(--pn-space-md);
+  padding: var(--pn-space-md) var(--pn-space-xl);
   background: var(--pn-palette-base-white);
   border: 1px solid var(--pn-palette-gray-light-300);
   border-radius: var(--pn-radius-md);
