--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -61,7 +61,7 @@
   font-size: 24px;
   cursor: pointer;
   color: var(--pn-palette-gray-light-500);
-  padding: var(--pn-space-2xl);
+  padding: var(--pn-space-xs);
   border-radius: var(--pn-radius-sm);
   transition: background-color 0.2s ease;
 }
